test/fail/module/entity-constraint-in-module.app
module goto

entity XYZ {

	name :: String
	name :: Int

}
	
